<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/menu_map_download"
        android:id="@+id/action_map_download"
        android:icon="@drawable/ic_download_white_24px"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/menu_map_layers"
        android:id="@+id/action_select_layer"
        android:icon="@drawable/ic_layers_white_24px"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/menu_toggle_elevation"
        android:id="@+id/action_show_elevation"
        android:icon="@drawable/ic_terrain_white_24px"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/menu_add_waypoint"
        android:id="@+id/action_add_waypoint"
        android:icon="@drawable/ic_add_location_white_24px"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/menu_map_storage"
        android:id="@+id/action_map_storage"
        android:icon="@drawable/ic_sd_storage_white_24px"
        app:showAsAction="ifRoom" />

</menu>